--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "2.0.0-rc.4",
+    "aws-cdk": "2.0.0-rc.5",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.0.0-rc.4",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "2.0.0-rc.5",
+    "aws-lambda-golang-cdk-v2": "1.0.0",
+    "constructs": "^10.0.5",
     "source-map-support": "^0.5.16"
   }
 }
