adds frontend and api paginaiton

--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.17.0",
+    "@types/gaussian": "^1.1.2",
     "aws-cdk-lib": "2.0.0-rc.5",
     "aws-lambda-golang-cdk-v2": "^0.1.4",
     "constructs": "^10.0.5",
+    "gaussian": "^1.2.0",
+    "mathjs": "^9.4.1",
     "source-map-support": "^0.5.16"
   }
 }
