--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@apollo/client": "^3.3.19",
     "@types/d3": "^6.7.0",
+    "@types/mapbox-gl": "^2.3.0",
     "@types/react": "^17.0.8",
     "autoprefixer": "^10.2.6",
     "aws-amplify": "^3.4.3",
@@ -17,11 +18,16 @@
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.3.1",
     "next": "^10.2.3",
     "postcss": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14"
+  }
 }
