--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "postcss": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
