--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,26 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.3.19",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/d3": "^6.7.0",
     "@types/mapbox-gl": "^2.3.0",
     "@types/react": "^17.0.8",
     "autoprefixer": "^10.2.6",
     "aws-amplify": "^3.4.3",
     "d3": "^6.7.0",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.3.1",
-    "next": "^10.2.3",
+    "next": "^11.0.1",
     "postcss": "^8.3.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tailwindcss": "^2.1.2",
     "typescript": "^4.3.4"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14"
   }
 }
