--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "d3": "^6.7.0",
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
+    "fathom-client": "^3.0.0",
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
