--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.3.1",
     "next": "^11.0.1",
+    "next-seo": "^4.26.0",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
